sample/retrieveUnpackaged/objects/Offer__c.object
<CustomObject>
    <fields>
        <fullName>Offer_Amount__c</fullName>
        <label>Offer Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Offer_Name__c</fullName>
        <label>Offer Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Close_Date__c</fullName>
        <label>Target Close Date</label>
        <type>Date</type>
    </fields>
    <label>Offer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OF-{0000}</displayFormat>
        <label>Offer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>